--- a/style.css
+++ b/style.css
@@ -67,6 +67,11 @@ h3 {
 
 .projects .project {
   flex: 1;
+  padding: 5px;
+}
+
+.skills {
+  border: 2px solid #19d395;
 }
 
 .skills ul {
@@ -79,6 +84,11 @@ h3 {
 
 .skills ul li {
   margin: 0 10px;
+}
+
+.skills > h3 {
+  padding-top: 20px;
+  text-decoration: underline;
 }
 
 footer > ul > li > a {
