--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@ header {
 }
 
 h1 {
-  font-size: 26px;
+  font-size: 30px;
   font-weight: bold;
 }
 
 h3 {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: bolder;
   padding-bottom: 10px;
 }
 
@@ -111,7 +111,7 @@ footer ul li {
   margin: 0 10px;
 }
 
-@media screen and (max-width: 740px) {
+@media screen and (max-width: 640px) {
   .projects {
     flex-direction: column;
   }
