--- a/style.css
+++ b/style.css
@@ -113,7 +113,9 @@ footer ul li {
 
 @media screen and (max-width: 640px) {
   .projects {
+    display: flex;
     flex-direction: column;
+    margin-top: 20px;
   }
   .project {
     margin: 20px 0;
