--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --linkLineColor: #000039;
+  --linkLineColor: #2e0060;
 }
 
 * {
@@ -36,6 +36,16 @@ h3 {
   font-weight: bolder;
   padding-bottom: 10px;
 }
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+#about {
+  text-align: center;
+  width: 500px;
+  font-style: italic;
+}
 
 .project > a {
   background: linear-gradient(
@@ -48,7 +58,11 @@ h3 {
   background-size: 4px 2px;
   color: #19d395;
   text-decoration: none;
-  transition: background-size 0.2s;
+  transition: background-size 0.3s;
+  display: inline-block;
+  margin: 10px;
+  padding: 5px;
+  border: 2px solid #19d395;
 }
 
 .project > a:hover {
@@ -81,6 +95,8 @@ h3 {
 
 .skills {
   border: 2px solid #19d395;
+  margin-bottom: 50px;
+  width: 75%;
 }
 
 .skills ul {
@@ -88,7 +104,7 @@ h3 {
   justify-content: center;
   flex-wrap: wrap;
   width: 80%;
-  margin: 0 auto 50px;
+  margin: 0 auto 20px;
 }
 
 .skills ul li {
@@ -118,6 +134,6 @@ footer ul li {
     margin-top: 20px;
   }
   .project {
-    margin: 20px 0;
+    margin: 20px;
   }
 }
