--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ header {
 }
 
 h1 {
-  font-size: 30px;
-  font-weight: bold;
+  font-size: 36px;
+  font-family: "Permanent Marker", cursive;
 }
 
 h3 {
@@ -84,6 +84,7 @@ h3 {
 
 .projects {
   display: flex;
+  flex-direction: column;
   margin: 50px 0;
   justify-content: space-around;
 }
