--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 28px;
   font-weight: bolder;
   padding-bottom: 10px;
 }
@@ -70,7 +70,8 @@ h3 {
 }
 
 .project > img {
-  width: 100%;
+  width: 80%;
+  max-width: 80%;
 }
 
 .project > ul {
