--- a/style.css
+++ b/style.css
@@ -36,6 +36,12 @@ h3 {
   font-weight: bolder;
   padding-bottom: 10px;
 }
+
+h4 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 .container {
   display: flex;
   justify-content: center;
@@ -44,7 +50,11 @@ h3 {
 #about {
   text-align: center;
   width: 500px;
-  font-style: italic;
+  font-style: none;
+}
+
+#about > p {
+  text-align: left;
 }
 
 .project > a {
