--- a/style.css
+++ b/style.css
@@ -98,6 +98,13 @@ h4 {
   text-decoration: underline;
 }
 
+.project > p {
+  max-width: 500px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .projects {
   display: flex;
   flex-direction: column;
@@ -152,5 +159,8 @@ footer ul li {
   }
   .project {
     margin: 20px;
+  }
+  .project > p {
+    width: auto;
   }
 }
