--- a/style.css
+++ b/style.css
@@ -26,7 +26,11 @@ nav > ul > li > a {
 }
 
 nav ul li a.active {
-  background: #2e0060;
+  background: #1f2624;
+}
+
+nav ul li a:hover {
+  background: #1f2624;
 }
 
 nav {
